Firebase Final Updates Done

--- a/android/app/src/main/res/layout/activity_analysis.xml
+++ b/android/app/src/main/res/layout/activity_analysis.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".AnalysisActivity">
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
 
-</RelativeLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".AnalysisActivity">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
