--- a/android/app/src/main/res/layout/activity_profile.xml
+++ b/android/app/src/main/res/layout/activity_profile.xml
@@ -59,7 +59,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Photos"
+                        android:text="Poses"
                         android:textSize="20sp" />
 
                     <TextView
