--- a/android/app/src/main/res/layout/activity_analysis.xml
+++ b/android/app/src/main/res/layout/activity_analysis.xml
@@ -1,15 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    android:fillViewport="true">-->
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        tools:context=".AnalysisActivity">-->
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,13 +8,12 @@
         android:id="@+id/plot"
         style="@style/APDefacto.Light"
         android:layout_width="fill_parent"
-        android:layout_height="655dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
+        android:scrollbarThumbHorizontal="@color/white"
+        android:scrollbarThumbVertical="@color/white"
         app:borderThickness="500dp"
-        app:domainTitle="domain"
-        app:rangeTitle="rang"
-        app:title="Practice History" />
-
-        </LinearLayout>
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-<!--</ScrollView>-->
+        app:domainTitle="Days"
+        app:rangeTitle="Time"
+        app:title="Workout History" />
+</LinearLayout>
